--- a/style.css
+++ b/style.css
@@ -35,20 +35,20 @@ video {
   to {
     opacity: 1;
   }
-  0% {
-    opacity: 1;
-  }
   
 }
 
-h1, h2, h3, p {
+
+p {
   color: aliceblue;
-  animation: fade linear;
-  animation-timeline: scroll();
+  animation: fade linear both;
+  animation-timeline: view();
+  animation-range: entry 50% cover 50%;
 }
 
 .welcome-text {
   margin-top: 40px;
+  animation: none;
 }
 
 .info {
