--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ body, html {
   margin: 0;
   padding: 0;
   height: 100%;
+  background-color: black; 
 }
 
 .container {
-  background-color: black;
   height: 100vh; 
+  margin: 0;
 }
 
 .landing-page {
@@ -35,26 +36,62 @@ video {
   to {
     opacity: 1;
   }
-  
 }
 
-
-p {
+h1, h2, h3, p {
   color: aliceblue;
   animation: fade linear both;
   animation-timeline: view();
   animation-range: entry 50% cover 50%;
 }
 
-.welcome-text {
+.phonetic-text {
   margin-top: 40px;
   animation: none;
+  font-style: italic;
 }
 
-.info {
-  color: black;
+.welcome-text {
+  margin: 0%;
 }
 
-.subtext-heading {
-  color: black;
+.profile-picture {
+  position: relative;
+  margin: 0 auto;
+  margin-left: 40px;
+  width: 350px;
+  height: 350px;
+  overflow: hidden;
+  background: url('images/bigcolorful.png');
+  transition: filter 1s ease; /* Smooth transition for the filter property */
+  animation: fade linear both;
+  animation-timeline: view();
+  animation-range: entry 50% cover 50%;
+}
+
+.profile-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  opacity: 60%;
+  transition: background-color 1s ease; /* Smooth transition for the background-color property */
+}
+
+.intro-container {
+  display: flex; /* Add this line to make the children of .intro-container flex items */
+  margin: 5%;
+  margin-top: 0%;
+  padding: 2%;
+  justify-content: center;
+  align-items: center;
+  /* background-color: aquamarine; */
+}
+
+.intro-text {
+  flex: 1; 
+  padding: 2%; 
+
 }
